# encurtador-url

./: README.md  docker-compose.yml
services/backend/: .coverage  .gitignore  Dockerfile  aerich.ini  pyproject.toml
services/backend/migrations/models/: 10_20220226004904_update.sql  11_20220226011612_update.sql  1_20220220150559_update.sql  2_20220220153847_update.sql  3_20220220213135_update.sql  4_20220220234401_update.sql  5_20220221004835_update.sql  6_20220223013852_update.sql  7_20220223015818_update.sql  8_20220223020737_update.sql  9_20220223024339_update.sql
services/backend/src/: main.py
services/backend/src/auth/: jwthandler.py  users.py
services/backend/src/config/: database.py  models.py
services/backend/src/crud/: urls.py  users.py
services/backend/src/routes/: urls.py  users.py
services/backend/src/schemas/: token.py  urls.py  users.py
services/backend/tests/: .coverage  conftest.py
services/backend/tests/test_api/test_errors/: test_422_error.py  test_error.py
services/frontend2/: Dockerfile  package-lock.json  package.json
services/frontend2/public/: index.html
services/frontend2/src/: App.vue  main.js
services/frontend2/src/router/: index.js
services/frontend2/src/store/: index.js
services/frontend2/src/store/modules/: users.js
services/frontend2/src/views/: 404.vue  Admin.vue  Cadastro.vue  Inicial.vue  Login.vue  UrlEncurtada.vue
